force-app/main/default/objects/Individual__c/Individual__c.object-meta.xml
<CustomObject>
    <description>Individuals represent individual people who interact with the Newport Art Museum.</description>
    <label>Individual</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>