force-app/main/default/objects/Individual__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>This individual's date of birth.</description>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>