force-app/main/default/objects/Individual__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>This formula field rolls up the different name fields on this individual into a single string, their full name.</description>
    <formula>First_Name__c &amp; IF(Middle_Name__c != "", " ", "") &amp; Middle_Name__c &amp; " " &amp; Last_Name__c &amp; IF(Suffix__c != "", ", ", "") &amp; Suffix__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>