force-app/main/default/objects/Individual__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>This field captures this individual's last name.</description>
    <label>Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>