force-app/main/default/objects/Individual__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>This field captures this individual's middle name, if any.</description>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>