force-app/main/default/objects/Individual__c/fields/RE_ID__c.field-meta.xml
<CustomField>
    <fullName>RE_ID__c</fullName>
    <description>This field captures the Raiser's Edge ID of this record, if any exists.</description>
    <externalId>true</externalId>
    <label>Raiser's Edge ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>