force-app/main/default/objects/Individual__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <description>Records the preferred salutation for this individual.</description>
    <label>Salutation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Individual_Salutations</valueSetName>
    </valueSet>
</CustomField>