force-app/main/default/objects/Individual__c/fields/Solicit_Codes__c.field-meta.xml
<CustomField>
    <fullName>Solicit_Codes__c</fullName>
    <description>This field captures the solicit codes this individual applied.</description>
    <label>Solicit Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Individual_Solicit_Codes</valueSetName>
    </valueSet>
</CustomField>