force-app/main/default/objects/Individual__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>This field captures any suffixes to this individual's name.</description>
    <label>Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>