force-app/main/default/objects/Individual__c/listViews/All_Individuals.listView-meta.xml
<ListView>
    <fullName>All_Individuals</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Individuals</label>
</ListView>